--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -183,9 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    11\n",
+      "1    12\n",
+      "2    13\n",
+      "3    16\n",
+      "4    17\n",
+      "5    18\n",
+      "dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"3_Exercise3\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
@@ -214,7 +227,6 @@
     "B = pd.Series([11, 12, 13, 14, 15])\n",
     "\n",
     "def exercise_3(A, B) -> pd.Series:\n",
-    "    '''\n",
     "    A = A.to_list()\n",
     "    B = B.to_list()\n",
     "\n",
@@ -229,12 +241,13 @@
     "            unique_items.append(item)\n",
     "    \n",
     "    ex3_sol = sorted(unique_items)\n",
+    "    ex3_sol = pd.Series(ex3_sol)\n",
     "    print(ex3_sol)\n",
     "    return (ex3_sol)\n",
-    "    '''\n",
-    "    ex3_sol = pd.Series(list(set(A).symmetric_difference(set(B))))\n",
+    "\n",
+    "    #ex3_sol = pd.Series(list(set(A).symmetric_difference(set(B))))\n",
     "    #print(pd.Series([11, 12, 13, 16, 17, 18]))\n",
-    "    return ex3_sol.sort_values()\n",
+    "    #return ex3_sol.sort_values()\n",
     "\n",
     "                \n",
     "    #return NotImplementedError\n",
@@ -634,46 +647,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The answer for this question is undetermined, use the online test instead.\n"
+     "ename": "KeyError",
+     "evalue": "'Year'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/pandas/core/indexes/base.py:3805\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3804\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3805\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3806\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'Year'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[53]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      6\u001b[39m     df_copy = df_copy.dropna(subset=[\u001b[33m'\u001b[39m\u001b[33mYear\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m      8\u001b[39m     df_copy.set_index(\u001b[33m'\u001b[39m\u001b[33mYear\u001b[39m\u001b[33m'\u001b[39m, inplace=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m ex9_sol = \u001b[43mexercise_9\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m q9.check()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[53]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36mexercise_9\u001b[39m\u001b[34m(df)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mexercise_9\u001b[39m(df) -> pd.DataFrame:\n\u001b[32m      2\u001b[39m     df_copy = df.copy()\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     df_copy[\u001b[33m'\u001b[39m\u001b[33mYear\u001b[39m\u001b[33m'\u001b[39m] = pd.to_datetime(\u001b[43mdf_copy\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mYear\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m, \u001b[38;5;28mformat\u001b[39m=\u001b[33m'\u001b[39m\u001b[33m%\u001b[39m\u001b[33mY\u001b[39m\u001b[33m'\u001b[39m, errors=\u001b[33m'\u001b[39m\u001b[33mcoerce\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      6\u001b[39m     df_copy = df_copy.dropna(subset=[\u001b[33m'\u001b[39m\u001b[33mYear\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m      8\u001b[39m     df_copy.set_index(\u001b[33m'\u001b[39m\u001b[33mYear\u001b[39m\u001b[33m'\u001b[39m, inplace=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4100\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4101\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4102\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4103\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4104\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3807\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3808\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3809\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3810\u001b[39m     ):\n\u001b[32m   3811\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3814\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3815\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3816\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3817\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'Year'"
      ]
-    },
-    {
-     "data": {
-      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"9_Exercise9\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "<span style=\"color:#33cc33\">Correct</span>"
-      ],
-      "text/plain": [
-       "Correct"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "def exercise_9(df) -> pd.DataFrame:\n",
     "    df_copy = df.copy()\n",
-    "    df_copy['Year'] = pd.to_datetime(df_copy['Year'])\n",
-    "    df_copy.set_index('Year', inplace = True)\n",
-    "    return df_copy\n",
-    "    #return NotImplementedError\n",
+    "\n",
+    "    df_copy['Year'] = pd.to_datetime(df_copy['Year'], format='%Y', errors='coerce')\n",
+    "\n",
+    "    df_copy = df_copy.dropna(subset=['Year'])\n",
+    "\n",
+    "    df_copy.set_index('Year', inplace=True)\n",
     "\n",
     "ex9_sol = exercise_9(df)\n",
     "q9.check()"
@@ -937,9 +945,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "url                          0.00\n",
+      "creator                      0.00\n",
+      "created_t                    0.00\n",
+      "created_datetime             0.00\n",
+      "last_modified_t              0.00\n",
+      "                            ...  \n",
+      "carbon-footprint_100g      100.00\n",
+      "nutrition-score-fr_100g     21.44\n",
+      "nutrition-score-uk_100g     21.44\n",
+      "glycemic-index_100g        100.00\n",
+      "water-hardness_100g        100.00\n",
+      "Name: 0, Length: 162, dtype: float64\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"14_Exercise14\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
@@ -967,9 +993,10 @@
     "def exercise_14(df) -> pd.Series:\n",
     "    df_copy = df.copy()\n",
     "    occurence = df_copy.isna().mean() * 100\n",
-    "    #print(round(occurence[1:], 2))\n",
-    "    return round(occurence[1:], 2)\n",
-    "    #return NotImplementedError\n",
+    "    result = round(occurence[1:], 2)\n",
+    "    result.name = 0  \n",
+    "    print(result)\n",
+    "    return result\n",
     "\n",
     "ex14_sol = exercise_14(df)\n",
     "q14.check()"
@@ -1164,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1200,15 +1227,20 @@
    "source": [
     "def exercise_18(df) -> pd.DataFrame:\n",
     "    df_copy = df.copy()\n",
-    "    \n",
-    "    table = pd.pivot_table(df_copy, values='carbohydrates_100g', index='categories_en', \n",
-    "                           columns=['countries_en'], aggfunc=\"mean\")\n",
-    "    \n",
-    "    #print(table)\n",
-    "    return table\n",
-    "    \n",
     "\n",
-    "    #return NotImplementedError\n",
+    "    # Loại bỏ các hàng không có thông tin cần thiết\n",
+    "    df_copy = df_copy[['categories_en', 'countries_en', 'carbohydrates_100g']].dropna()\n",
+    "\n",
+    "    # Tạo pivot table\n",
+    "    table = pd.pivot_table(\n",
+    "        df_copy,\n",
+    "        values='carbohydrates_100g',\n",
+    "        index='categories_en',\n",
+    "        columns='countries_en',\n",
+    "        aggfunc='mean'\n",
+    "    )\n",
+    "\n",
+    "    return table\n",
     "\n",
     "ex18_sol = exercise_18(df)\n",
     "q18.check()"
