--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -225,32 +225,13 @@
    "source": [
     "A = pd.Series([14, 15, 16, 17, 18])\n",
     "B = pd.Series([11, 12, 13, 14, 15])\n",
-    "\n",
     "def exercise_3(A, B) -> pd.Series:\n",
-    "    A = A.to_list()\n",
-    "    B = B.to_list()\n",
+    "        #return pd.Series(list(set(A).symmetric_difference(set(B))))\n",
+    "    union = set(A).union(set(B))\n",
+    "    intersection = set(A).intersection(set(B))\n",
+    "    # Subtract the intersection from the union\n",
+    "    return pd.Series(list(union - intersection))\n",
     "\n",
-    "    unique_items = []\n",
-    "\n",
-    "    for item in A:\n",
-    "        if item not in B:\n",
-    "            unique_items.append(item)\n",
-    "    \n",
-    "    for item in B:\n",
-    "        if item not in A:\n",
-    "            unique_items.append(item)\n",
-    "    \n",
-    "    ex3_sol = sorted(unique_items)\n",
-    "    ex3_sol = pd.Series(ex3_sol)\n",
-    "    print(ex3_sol)\n",
-    "    return (ex3_sol)\n",
-    "\n",
-    "    #ex3_sol = pd.Series(list(set(A).symmetric_difference(set(B))))\n",
-    "    #print(pd.Series([11, 12, 13, 16, 17, 18]))\n",
-    "    #return ex3_sol.sort_values()\n",
-    "\n",
-    "                \n",
-    "    #return NotImplementedError\n",
     "\n",
     "ex3_sol = exercise_3(A, B)\n",
     "q3.check()"
@@ -647,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -676,13 +657,10 @@
    "source": [
     "def exercise_9(df) -> pd.DataFrame:\n",
     "    df_copy = df.copy()\n",
-    "\n",
-    "    df_copy['Year'] = pd.to_datetime(df_copy['Year'], format='%Y', errors='coerce')\n",
-    "\n",
-    "    df_copy = df_copy.dropna(subset=['Year'])\n",
-    "\n",
+    "    # Convert the 'Year' column to datetime64 and set it as the index\n",
+    "    df_copy['Year'] = pd.to_datetime(df_copy['Year'], format='%Y')\n",
     "    df_copy.set_index('Year', inplace=True)\n",
-    "\n",
+    "    return df_copy\n",
     "ex9_sol = exercise_9(df)\n",
     "q9.check()"
    ]
@@ -945,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -990,13 +968,9 @@
     }
    ],
    "source": [
+    "df.index =df.index.astype(str)\n",
     "def exercise_14(df) -> pd.Series:\n",
-    "    df_copy = df.copy()\n",
-    "    occurence = df_copy.isna().mean() * 100\n",
-    "    result = round(occurence[1:], 2)\n",
-    "    result.name = 0  \n",
-    "    print(result)\n",
-    "    return result\n",
+    "    return round(df.isna().mean() * 100, 2)\n",
     "\n",
     "ex14_sol = exercise_14(df)\n",
     "q14.check()"
@@ -1191,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1226,22 +1200,13 @@
    ],
    "source": [
     "def exercise_18(df) -> pd.DataFrame:\n",
-    "    df_copy = df.copy()\n",
-    "\n",
-    "    # Loại bỏ các hàng không có thông tin cần thiết\n",
-    "    df_copy = df_copy[['categories_en', 'countries_en', 'carbohydrates_100g']].dropna()\n",
-    "\n",
-    "    # Tạo pivot table\n",
-    "    table = pd.pivot_table(\n",
-    "        df_copy,\n",
+    "    pivot_table = df.pivot_table(\n",
+    "        index='categories',\n",
+    "        columns='countries',\n",
     "        values='carbohydrates_100g',\n",
-    "        index='categories_en',\n",
-    "        columns='countries_en',\n",
     "        aggfunc='mean'\n",
     "    )\n",
-    "\n",
-    "    return table\n",
-    "\n",
+    "    return pivot_table\n",
     "ex18_sol = exercise_18(df)\n",
     "q18.check()"
    ]
